<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- Splash Screen -->
    
    <string name="copy_rights">copyright © AAIL 2015</string>
    <string name="company">Aadhya Analytics</string>
    

    <!-- User Input -->
    
    
    <string name="enter_location">Enter Location</string>
    <string name="go">Go</string>
    <string name="grid">Grid</string>
    <string name="location">Location</string>
    <string name="detail">Get Detailed Weather</string>
    <string name="date">Date</string>
    <string name="temp">32</string>  
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
   
    <!--Detailed Screen Parameters  -->
    <string name="max_temp">Max Temp  </string>
    <string name="min_temp">Min Temp  </string>
    <string name="wind">Wind Speed </string>
    <string name="humidity">Humidity  </string>
    <string name="sea_level">Wind Deg  </string>
    <string name="ground_level">Pressure  </string>
   <string name="description">Description</string>
    <string name="temperature">32</string>
  
    
    
     <string name="no_network">No Netowrk connection</string>
   
    
</resources>